--- a/configs/settings.ini
+++ b/configs/settings.ini
@@ -42,6 +42,9 @@
 		// Количество выводимых игроков при вводе команды !top и !toptime
 		"lr_top_count"			"5"
 
+		// Количество очков выдающихся игроку при первом заходе на сервер
+		"lr_start_points"			"5"
+
 		// Показывать ли сообщения от плагина, при каждом возрождении? [ 0 - нет, 1 - да ]
 		"lr_show_spawnmessage" "1"
 
