--- a/configs/settings.ini
+++ b/configs/settings.ini
@@ -75,6 +75,9 @@
 		// Показывать ли в меню статистики пункт "Все звания"? [ 0 - нет, 1 - да ]
 		"lr_show_ranklist" "1"
 
+		// Количество очков выдающихся игроку при первом заходе на сервер
+		"lr_start_points"			"5"
+
 		// Разрешить ли игрокам получать/терять очки опыта, когда раунд завершился? [ 0 - нет, 1 - да ]
 		"lr_giveexp_roundend" "1"
 
