--- a/configs/settings.ini
+++ b/configs/settings.ini
@@ -113,15 +113,11 @@
 		// 1 - utf8(mb4)_unicode_ci (Рекомендуется для MySQL 8.0+).
 		"lr_db_character_type" "0"
 
+		//Айди сервера который будет отображаться в колонке online при наличии игрока на сервере
+		"lr_online_id"			"1"
 
-
-        //										SOON...
-		// Какие флаги должен иметь администратор, чтобы иметь доступ к Панели Администратора?
-		// "lr_flag_adminmenu" "z"
 		// Сколько секунд должно пройти, чтобы можно было повторно сбросить свою статистику?
-		// "lr_resetmystats_cooldown"	"86400"
-		// Скрывать ли игрока в статистике, если он был забанен? [ 0 - нет, 1 - да ]
-		// "lr_cleandb_banclient" "1"
+		"lr_resetmystats_cooldown"	"86400"
     }
 	"Ranks"
 	{
