--- a/configs/settings.ini
+++ b/configs/settings.ini
@@ -63,11 +63,17 @@
 		// Показывать ли сообщения от плагина, при каждом возрождении? [ 0 - нет, 1 - да ]
 		"lr_show_spawnmessage" "1"
 
-		// Показывать ли сообщения всем о том, что кто-то поднял свое звание? [ 0 - нет, 1 - да ]
+		// Показывать ли сообщение пользователю о том, что он поднял свое звание? [ 0 - нет, 1 - да ]
 		"lr_show_levelup_message" "1"
 
-		// Показывать ли сообщения всем о том, что кто-то потерял свое звание? [ 0 - нет, 1 - да ]
+		// Показывать ли сообщение пользователю о том, что он потерял свое звание? [ 0 - нет, 1 - да ]
 		"lr_show_leveldown_message" "1"
+
+		// Показывать ли сообщения всем о том, что кто-то поднял свое звание? [ 0 - нет, 1 - да ]
+		"lr_show_all_levelup_message" "1"
+
+		// Показывать ли сообщения всем о том, что кто-то потерял свое звание? [ 0 - нет, 1 - да ]
+		"lr_show_all_leveldown_message" "1"
 
 		// Показывать ли всем сообщение о том, какое место занимает игрок, после того, как он написал команду rank? [ 0 - нет, 1 - да ]
 		"lr_show_rankmessage" "1"
